// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-uploader.vue Demo-一次性上传多文件 1`] = `
<div class="root">
  <div class="select" vusion-slot-name="default">
    <input class="file" multiple="multiple" name="file" type="file">
    <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Upload</a>
  </div>
  <div class="list" list-type="text">
    <div class="item">
      <div class="thumb">
      </div>
      <a class="link" download href="https://static-vusion.163yun.com/assets/breakfast.png" role="download" target="_blank">breakfast.png</a>
      <span class="lcp-iconv remove">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-remove" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </div>
    <div class="item">
      <div class="thumb">
      </div>
      <a class="link" download href="https://static-vusion.163yun.com/assets/salad.png" role="download" target="_blank">salad.png</a>
      <span class="lcp-iconv remove">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-remove" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-单个文件按钮 1`] = `
<div>
  <div class="root" display="inline">
    <div class="select" vusion-slot-name="default">
      <input class="file" name="file" type="file">
      <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        <span class="lcp-iconv">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-upload" />
            </svg>
          </span>
          <div class="icontext" vusion-slot-name="default">
          </div>
        </span> 上传
      </a>
    </div>
    <div class="list" list-type="text">
      <span style="display: none;" vusion-slot-name="file-list">
        <span class="lcp-iconv" flag="file-icon" style="margin: 0px 8px 0px 0px;">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-file-default" />
            </svg>
          </span>
        </span>
        <span class="root" flag="file-name" style="margin: 0px 8px 0px 0px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; display: inherit;" vusion-slot-name-edit="text">文件名称</span>
        <span class="root" flag="file-size" style="margin: 0px 8px 0px 0px;" vusion-slot-name-edit="text">文件大小</span>
        <span class="lcp-iconv" flag="download-icon" style="margin: 0px 8px 0px 0px;">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-download" />
            </svg>
          </span>
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-单文件卡片 1`] = `
<div>
  <div class="root">
    <div class="list" list-type="card">
      <div class="cardwrap">
        <div class="card" role="select">
          <input accept=".png,.jpg,.jpeg,.gif,.bmp" class="file" name="file" type="file">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-单文件卡片 2`] = `
<div class="root">
  <div class="list" list-type="card">
    <div class="cardwrap">
      <div class="card" role="select">
        <input accept="image/png, image/jpg, image/jpeg, image/gif, image/bmp" class="file" name="file" type="file">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-单文件只读 1`] = `
<div class="root" direction="vertical" type vusion-slot-name="default">
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div class="root">
      <div class="list" list-type="card">
        <div class="card">
          <div class="thumb">
            <img class="img" src="https://static-vusion.163yun.com/assets/breakfast.png">
          </div>
          <div class="mask">
            <div class="buttons">
              <span class="button" role="remove"></span>
              <span class="button" role="preview"></span>
              <a class="button" download href="https://static-vusion.163yun.com/assets/breakfast.png" role="download" target="_blank"></a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="root" direction="horizontal" type vusion-slot-name="default">
    <div class="root">
      <div class="list" list-type="card">
        <div class="card">
          <div class="thumb">
            <img class="img" src="https://static-vusion.163yun.com/assets/breakfast.png">
          </div>
          <div class="mask">
            <div class="buttons">
              <span class="button" role="remove"></span>
              <span class="button" role="preview"></span>
              <a class="button" download href="https://static-vusion.163yun.com/assets/breakfast.png" role="download" target="_blank"></a>
            </div>
          </div>
        </div>
        <div class="card">
          <div class="thumb">
            <img class="img" src="https://static-vusion.163yun.com/assets/breakfast.png">
          </div>
          <div class="mask">
            <div class="buttons">
              <span class="button" role="remove"></span>
              <span class="button" role="preview"></span>
              <a class="button" download href="https://static-vusion.163yun.com/assets/breakfast.png" role="download" target="_blank"></a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-卡片列表 1`] = `
<div class="root">
  <div class="list" list-type="card">
    <div class="card">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/breakfast.png">
      </div>
      <div class="mask" multiple="multiple">
        <div class="buttons">
          <span class="button" role="remove"></span>
          <span class="button" role="preview"></span>
          <a class="button" download href="https://static-vusion.163yun.com/assets/breakfast.png" role="download" target="_blank"></a>
        </div>
      </div>
    </div>
    <div class="card">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/salad.png">
      </div>
      <div class="mask" multiple="multiple">
        <div class="buttons">
          <span class="button" role="remove"></span>
          <span class="button" role="preview"></span>
          <a class="button" download href="https://static-vusion.163yun.com/assets/salad.png" role="download" target="_blank"></a>
        </div>
      </div>
    </div>
    <div class="cardwrap">
      <div class="card" role="select">
        <input accept="image/png, image/jpg, image/jpeg, image/gif, image/bmp" class="file" multiple="multiple" name="file" type="file">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-只读 1`] = `
<div class="root">
  <div class="list" list-type="card">
    <div class="card">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/breakfast.png">
      </div>
      <div class="mask" multiple="multiple">
        <div class="buttons">
          <span class="button" role="preview"></span>
          <a class="button" download href="https://static-vusion.163yun.com/assets/breakfast.png" role="download" target="_blank"></a>
        </div>
      </div>
    </div>
    <div class="card">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/salad.png">
      </div>
      <div class="mask" multiple="multiple">
        <div class="buttons">
          <span class="button" role="preview"></span>
          <a class="button" download href="https://static-vusion.163yun.com/assets/salad.png" role="download" target="_blank"></a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-图片列表 1`] = `
<div class="root">
  <div class="select" vusion-slot-name="default">
    <input accept="image/png, image/jpg, image/jpeg, image/gif, image/bmp" class="file" multiple="multiple" name="file" type="file">
    <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Upload</a>
  </div>
  <div class="list" list-type="image">
    <div class="item">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/breakfast.png">
      </div>
      <a class="link" download href="https://static-vusion.163yun.com/assets/breakfast.png" role="download" target="_blank">breakfast.png</a>
      <span class="lcp-iconv remove">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-remove" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </div>
    <div class="item">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/salad.png">
      </div>
      <a class="link" download href="https://static-vusion.163yun.com/assets/salad.png" role="download" target="_blank">salad.png</a>
      <span class="lcp-iconv remove">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-remove" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-图片列表simple 1`] = `
<div class="root">
  <div class="list" list-type="card">
    <div class="card">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/breakfast.png">
      </div>
      <div class="mask" multiple="multiple">
        <div class="buttons">
          <span class="button" role="remove"></span>
          <span class="button" role="preview"></span>
          <a class="button" download href="https://static-vusion.163yun.com/assets/breakfast.png" role="download" target="_blank"></a>
        </div>
      </div>
    </div>
    <div class="card">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/salad.png">
      </div>
      <div class="mask" multiple="multiple">
        <div class="buttons">
          <span class="button" role="remove"></span>
          <span class="button" role="preview"></span>
          <a class="button" download href="https://static-vusion.163yun.com/assets/salad.png" role="download" target="_blank"></a>
        </div>
      </div>
    </div>
    <div class="cardwrap">
      <div class="card" role="select">
        <input accept="image/png, image/jpg, image/jpeg, image/gif, image/bmp" class="file" multiple="multiple" name="file" type="file">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-图片编辑器自定义(只支持单文件上传) 1`] = `
<div>
  <div class="root">
    <div class="list" list-type="card">
      <div class="cardwrap">
        <div class="card" role="select">
          <input class="file" name="file" type="file">
        </div>
      </div>
    </div>
    <div class="root"></div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-基本用法 1`] = `
<div class="root">
  <div class="select" vusion-slot-name="default">
    <input class="file" name="file" type="file">
    <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Upload</a>
  </div>
  <div class="list" list-type="text"></div>
</div>
`;

exports[`u-uploader.vue Demo-基本用法simple 1`] = `
<div class="root">
  <div class="list" list-type="card">
    <div class="cardwrap">
      <div class="card" role="select">
        <input class="file" name="file" type="file">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-多图片按钮 1`] = `
<div>
  <div class="root">
    <div class="select" vusion-slot-name="default">
      <input accept=".png,.jpg,.jpeg,.gif,.bmp" class="file" multiple="multiple" name="file" type="file">
      <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        <span class="lcp-iconv">
          <span class="iconwrap">
            <svg aria-hidden="true" class="iconsvg">
              <use xlink:href="#pc-upload" />
            </svg>
          </span>
          <div class="icontext" vusion-slot-name="default">
          </div>
        </span> 上传
      </a>
    </div>
    <div class="list" list-type="image"></div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-多文件上传 1`] = `
<div class="root">
  <div class="select" vusion-slot-name="default">
    <input class="file" multiple="multiple" name="file" type="file">
    <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      Upload</a>
  </div>
  <div class="list" list-type="text">
    <div class="item">
      <div class="thumb">
      </div>
      <a class="link" download href="https://static-vusion.163yun.com/assets/breakfast.png" role="download" target="_blank">breakfast.png</a>
      <span class="lcp-iconv remove">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-remove" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </div>
    <div class="item">
      <div class="thumb">
      </div>
      <a class="link" download href="https://static-vusion.163yun.com/assets/salad.png" role="download" target="_blank">salad.png</a>
      <span class="lcp-iconv remove">
        <span class="iconwrap">
          <svg aria-hidden="true" class="iconsvg">
            <use xlink:href="#pc-remove" />
          </svg>
        </span>
        <div class="icontext" vusion-slot-name="default">
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-多文件上传simple 1`] = `
<div class="root">
  <div class="list" list-type="card">
    <div class="card">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/breakfast.png">
      </div>
      <div class="mask" multiple="multiple">
        <div class="buttons">
          <span class="button" role="remove"></span>
          <span class="button" role="preview"></span>
          <a class="button" download href="https://static-vusion.163yun.com/assets/breakfast.png" role="download" target="_blank"></a>
        </div>
      </div>
    </div>
    <div class="card">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/salad.png">
      </div>
      <div class="mask" multiple="multiple">
        <div class="buttons">
          <span class="button" role="remove"></span>
          <span class="button" role="preview"></span>
          <a class="button" download href="https://static-vusion.163yun.com/assets/salad.png" role="download" target="_blank"></a>
        </div>
      </div>
    </div>
    <div class="cardwrap">
      <div class="card" role="select">
        <input class="file" multiple="multiple" name="file" type="file">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-开启图片编辑(只支持单文件上传) 1`] = `
<div>
  <div class="root">
    <div class="list" list-type="card">
      <div class="cardwrap">
        <div class="card" role="select">
          <input class="file" name="file" type="file">
        </div>
      </div>
    </div>
    <div class="root"></div>
  </div>
  <div class="root">
    <div class="select" vusion-slot-name="default">
      <input class="file" name="file" type="file">
      <a class="root" color="primary" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
        Upload</a>
    </div>
    <div class="root"></div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-拖拽和粘贴上传 1`] = `
<div class="root">
  <div class="draggable" tabindex="0">
    <input class="file" name="file" type="file">
    <div>
      <div class="dragDescription" vusion-slot-name="dragDescription">点击/拖动/粘贴文件到这里</div>
    </div>
  </div>
  <div class="list" list-type="text"></div>
</div>
`;

exports[`u-uploader.vue Demo-检查文件格式等 1`] = `
<div class="root">
  <div class="list" list-type="card">
    <div class="card">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/breakfast.png">
      </div>
      <div class="mask" multiple="multiple">
        <div class="buttons">
          <span class="button" role="remove"></span>
          <span class="button" role="preview"></span>
          <a class="button" download href="https://static-vusion.163yun.com/assets/breakfast.png" role="download" target="_blank"></a>
        </div>
      </div>
    </div>
    <div class="card">
      <div class="thumb">
        <img class="img" src="https://static-vusion.163yun.com/assets/salad.png">
      </div>
      <div class="mask" multiple="multiple">
        <div class="buttons">
          <span class="button" role="remove"></span>
          <span class="button" role="preview"></span>
          <a class="button" download href="https://static-vusion.163yun.com/assets/salad.png" role="download" target="_blank"></a>
        </div>
      </div>
    </div>
    <div class="cardwrap">
      <div class="card" role="select">
        <input class="file" multiple="multiple" name="file" type="file">
      </div>
    </div>
  </div>
</div>
`;

exports[`u-uploader.vue Demo-相同的文件 1`] = `
<div class="root">
  <div class="select" vusion-slot-name="default">
    <input class="file" name="file" type="file">
    <a class="root" hovertype="underline" tabindex="0" target="_self" vusion-slot-name-edit="text">
      upload</a>
  </div>
  <div class="list" list-type="text"></div>
</div>
`;

exports[`u-uploader.vue Demo-禁用状态 1`] = `
<div>
  <div class="root">
    <div class="select" vusion-slot-name="default">
      <input class="file" disabled="disabled" name="file" type="file">
      <a class="root" color="primary" disabled="disabled" hovertype="underline" tabindex="-1" target="_self" vusion-slot-name-edit="text">
        Upload</a>
    </div>
    <div class="list" list-type="text"></div>
  </div>
</div>
`;
